test fixes, green build