@@ -12,6 +12,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Component
@@ -39,7 +40,7 @@ public class DeleteResourcePatchHandler extends PatchHandler<DeleteResourcePatch
                     activity.setPointOfInterests(filteredpoiList);
                     return activity;
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
